--- a/AdaptiveTileExtensions.Testing/UnitTestApp.xaml
+++ b/AdaptiveTileExtensions.Testing/UnitTestApp.xaml
@@ -1,6 +1,8 @@
 ﻿<Application
-    x:Class="AdaptiveTileExtensionsSample.App"
+    x:Class="AdaptiveTileExtensions.Testing.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:AdaptiveTileExtensions.Testing"
     RequestedTheme="Light">
+
 </Application>
